data/derived/fa15/progs/unify/prog2963.ml.out
Characters 114-124:
  digitsOfIntHelper (n - (n mod 10)/10)  @ (n mod 10) 
                                           ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
